# composable-kale-notebooks

./: .gitignore  DEMO.md  README.md  pyproject.toml  working.md
kale/: cli.py  pipeline.py
kale/common/: podutils.py
kale/processors/: nbprocessor.py  workflow.py
kale/rpc/: kfp.py
kale/templates/: workflow_template.jinja2
kale/tests/unit_tests/: test_parser.py  test_workflow.py
notebooks/: notebook_a.ipynb  notebook_b.ipynb  notebook_c.ipynb
